# zettelkasten-memory

./: .gitignore  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml
src/zettelkasten_memory/: __init__.py  backends.py  camouflage.py  compression.py  core.py  crypto.py  providers.py
src/zettelkasten_memory/adapters/: __init__.py  _tools.py  crewai.py  langgraph.py  mcp_server.py  smcp_federation.py  smcp_protocol.py  smcp_server.py
tests/: conftest.py  federation_conformance_vectors.json  test_camouflage.py  test_compression.py  test_consumer_contract.py  test_core.py  test_crypto.py  test_mcp_server.py  test_namespaces.py  test_providers.py  test_smcp_federation.py  test_smcp_server.py
