[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettelkasten-memory"
version = "0.1.0"
description = "Zettelkasten-inspired semantic memory for AI agents — works with CrewAI, LangGraph, and Claude Code (MCP)"
authors = [
    {name = "Kevin Keller", email = "kellerkev@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agents", "memory", "zettelkasten", "semantic-search", "mcp", "crewai", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
embeddings = ["openai>=1.0.0"]
crewai = ["crewai>=0.80.0"]
langgraph = ["langgraph>=0.2.0", "langgraph-checkpoint>=2.0.0"]
mcp = ["mcp>=1.0.0"]
providers-cohere = ["cohere>=5.0.0"]
providers-voyage = ["voyageai>=0.3.0"]
providers-local = ["sentence-transformers>=2.0.0"]
all-providers = [
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "voyageai>=0.3.0",
    "sentence-transformers>=2.0.0",
]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=22.0.0"]

[project.urls]
Homepage = "https://github.com/KellerKev/zettelkasten-memory"
Repository = "https://github.com/KellerKev/zettelkasten-memory"
Issues = "https://github.com/KellerKev/zettelkasten-memory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
